# principe-oss

./: .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  WINDOWS-TEST.md  docker-compose.yml  install.ps1  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  enable-private-vuln-reporting.yml
apps/principe/: Dockerfile  entrypoint.sh  eslint.config.mjs  next.config.ts  package.json  postcss.config.mjs  prisma.config.ts  vitest.config.ts
assets/desktop/: principe.icns
calibration/: README.md  schema.json
calibration/datasets/: cisco-2025-readiness-index.json  cribl-2025-ciso-priorities.json  evanta-2026-ciso-priorities.json  foundry-2026-security-priorities.json  gartner-2026-threats.json  glilot-2026-ciso-survey.json  ians-2026-state-of-ciso.json  panorays-2026-ciso.json  proofpoint-2025-voc.json  sophos-2026-ciso.json  sygnia-2026-ir-readiness.json  team8-2025-ciso-village.json  verizon-2026-dbir.json  wakefield-2026-ciso-ai.json
calibration/knowledge/: README.md  dora-snapshot.json  nis2-snapshot.json  (+6 more)
docs/: market-trend-layer.md
scripts/: build-bundle.ts  generate-keypair.ts
services/statistician/: .env.example  .gitignore  Dockerfile  README.md  prewarm.py  pyproject.toml  requirements.txt
services/statistician/app/: auth.py  bayesian.py  calibration.py  main.py  models.py  verdict.py
services/statistician/tests/: conftest.py  test_auth.py  test_contract_coverage.py  test_main.py  test_verdict.py
(+259 files in other folders)
