[tool.poetry]
name = "principe-statistician"
version = "0.1.0"
description = "Bayesian verdict service for Principe — Sprint 2 ships stub heuristics; Sprint 3 swaps in PyMC/NumPyro under the same API contract."
authors = ["Omer Grossman <service@principe.cloud>"]
package-mode = false

[tool.poetry.dependencies]
# PyMC requires 3.10+; Modal image is 3.12.
# Local dev can run Python 3.9 with the stub fallback only (PyMC import
# will fail and `bayesian.py` returns None; the service falls back to
# the Sprint 2 heuristic with `stub: true`).
python = ">=3.9,<3.13"
fastapi = "^0.115"
pydantic = "^2.9"
uvicorn = { version = "^0.32", extras = ["standard"] }
# Bayesian deps — pinned floors. Import is best-effort at startup so a
# 3.9 local dev still boots (with stub fallback).
numpy = { version = "^1.26", python = ">=3.10" }
pandas = { version = "^2.2", python = ">=3.10" }
pymc = { version = "^5.16", python = ">=3.10" }
numpyro = { version = "^0.15", python = ">=3.10" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
httpx = "^0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
